added a link to the code repo for the github.io page. Need to update with the final website link.

--- a/malard/annotation_guide.html
+++ b/malard/annotation_guide.html
@@ -49,6 +49,7 @@
             <a class="link" href="#Annotation" data-scroll>Annotation Instructions &#x2022;</a>
             <a class="link" href="#Wrist" data-scroll>The Wrist &#x2022;</a>
             <a class="link" href="#Scoring" data-scroll>Scoring &#x2022;</a>
+            <a class="link" href="https://github.bath.ac.uk/cwrt20/AnnotationManipulation" data-scroll>Annotation Developers &#x2022;</a>
 <!--            <a class="link" href="#Image_manip" data-scroll>Image Intensity Variation &#x2022;</a>-->
 <!--            <a class="link" href="#Troubleshooting" data-scroll>Installation and Troubleshooting</a>-->
         </div>
